--- a/styles.css
+++ b/styles.css
@@ -615,7 +615,7 @@ p {
     flex-direction: column;
     gap: var(--gutter-m);
     background-color: transparent;
-    padding: var(--gutter-m);
+    padding: var(--gutter-l);
 }
 
 #about_us * {
@@ -655,6 +655,8 @@ p {
     overflow: auto;
     gap: 40px;
     padding: var(--gutter-l);
+    z-index: 1000;
+
 }
 
 .tile-container * {
@@ -673,7 +675,7 @@ p {
     display: flex;
     flex-direction: column;
     padding: var(--gutter-s);
-    z-index: 1;
+    z-index: 1000;
     border: 2px solid black
 }
 
