--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     }
 
     p {
-        font-size: .5em !important;
+        font-size: .6em !important;
     }
 
     li {
@@ -54,7 +54,7 @@
 
 :root {
     --gutter-xs: .3em;
-    --gutter-s: .5em;
+    --gutter-s: .6em;
     --gutter-m: 1em;
     --gutter-l: 1.5em;
     /*  */
@@ -77,6 +77,7 @@ body {
     height: fit-content;
     max-width: 100vw;
     overflow: auto;
+    overflow-x: hidden;
 }
 
 ul {
@@ -165,6 +166,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
     margin: auto;
 }
 
@@ -269,8 +271,10 @@ button.login:hover {
     height: 100vh;
     position: fixed;
     scroll-behavior: smooth;
-    overflow-x: hidden;
     background: linear-gradient(45deg, rgb(39, 46, 115) 27%, rgb(39, 46, 115) 77%);
+    max-width: 100vw !important;
+    overflow-x: hidden;
+
 }
 
 button {
@@ -284,12 +288,15 @@ button {
     width: 100%;
     display: flex;
     flex-direction: column;
+    background: rgb(39, 46, 115);
     background-size: 30px 30px;
     background-image: radial-gradient(circle, #7e7e7e 1px, rgba(0, 0, 0, 0) 1px);
     gap: 50px;
     padding: var(--gutter-m);
     display: flex;
     align-items: center;
+    overflow-x: hidden;
+
 }
 
 #events {
@@ -349,7 +356,6 @@ button {
     gap: var(--gutter-m);
     padding: var(--gutter-s);
     margin-top: var(--gutter-m);
-
 }
 
 .event-container {
@@ -368,10 +374,7 @@ button {
     cursor: default;
 }
 
-#event-tags {
-    display: flex;
-    gap: var(--gutter-s);
-}
+
 
 .event {
     height: fit-content;
@@ -385,7 +388,7 @@ button {
     align-items: center;
     -webkit-transition: var(--transition-slow);
     transition: var(--transition-slow);
-    border-radius: var(--rounded);
+    border-radius: 6px;
     font-weight: 400;
     letter-spacing: 2px;
     z-index: 1;
@@ -482,56 +485,10 @@ span.circle {
     z-index: 2;
 }
 
-.pop-up-container {
-    width: 100vw;
-    height: fit-content;
-    position: fixed;
-    z-index: 6;
-    left: 0px;
-    bottom: 0px;
-    transform: translateY(100%);
-    -webkit-transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
-    padding: var(--gutter-m);
-    border-bottom: 0px;
-    background-color: rgb(5, 5, 5);
-    display: flex;
-    border-top: 2px solid rgb(195, 195, 195);
-    gap: var(--gutter-s);
-    z-index: 100000;
-    overflow-y: auto;
-}
-
 .pop-up-container h1 {
-    color: white;
+    color: rgb(7, 7, 7);
 }
 
-.pop-up-header {
-    display: flex;
-    gap: var(--gutter-s);
-    align-items: center;
-    position: sticky;
-    top: 0;
-    background-color: black;
-    padding: var(--gutter-s);
-    padding-left: 0px;
-}
-
-.tag {
-    border-radius: var(--rounded);
-    background-color: #272727;
-    display: flex;
-    align-items: center;
-    padding: var(--gutter-s);
-    font-size: .8em;
-    color: rgb(242, 242, 242);
-}
-
-#map {
-    width: 300px;
-    height: 200px;
-    position: relative;
-}
 
 button.close-button {
     width: 50px;
@@ -575,21 +532,6 @@ span.cross-line {
     justify-content: space-between;
 }
 
-.text-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 200px;
-    padding: var(--gutter-m);
-    padding-top: 0px;
-    background-color: rgb(0, 0, 0);
-    gap: var(--gutter-m);
-}
-
-.text-container::-webkit-scrollbar {
-    width: 0px;
-    background: transparent;
-}
 
 p {
     color: white;
@@ -841,9 +783,8 @@ p {
     background-color: rgb(247, 247, 247);
     padding: 0px;
     border-radius: var(--rounded);
-    overflow: auto;
+    overflow-y: auto;
     padding-top: 0px;
-
 }
 
 input,
@@ -929,6 +870,8 @@ select:hover {
     border-radius: var(--rounded);
     background-color: rgb(229, 229, 229);
     padding: var(--gutter-xs);
+    background-color: red;
+    max-width: 100%;
 }
 
 .submit {
@@ -1044,7 +987,7 @@ select:hover {
 }
 
 #iframe-maps {
-    width: 500px;
+    width: 100%;
     height: 300px;
     min-height: 300px;
 }
@@ -1065,7 +1008,7 @@ button.menu {
 .audience {
     background-color: white;
     color: black;
-    padding: var(--gutter-xs);
+    padding: var(--gutter-s);
     border-radius: var(--rounded);
     height: fit-content;
     display: flex;
@@ -1130,10 +1073,11 @@ button.favorites:hover {
     display: flex;
     flex-direction: column;
     gap: var(--gutter-m);
-    width: fit-content;
+    width: 100%;
     height: fit-content;
     background-color: transparent;
     display: flex;
+    overflow-x: auto;
 }
 
 @import url(//fonts.googleapis.com/css?family=Open+Sans:600,400&subset=latin,cyrillic);
@@ -1297,4 +1241,96 @@ footer {
     padding: var(--gutter-xs);
     display: flex;
     justify-content: center;
+}
+
+/*  */
+
+
+#event-tags {
+    display: flex;
+    gap: var(--gutter-s);
+}
+
+.pop-up-container {
+    width: 100%;
+    height: 500px;
+    position: fixed;
+    z-index: 6;
+    left: 0px;
+    bottom: 0px;
+    transform: translateY(100%);
+    -webkit-transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    border-bottom: 0px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    border-top: 2px solid rgb(0, 0, 0);
+    gap: var(--gutter-m);
+    z-index: 100000;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    background-color: black;
+    box-shadow: var(--shadow);
+    max-width: 100vw;
+}
+
+.pop-up-header {
+    display: flex;
+    gap: var(--gutter-s);
+    align-items: center;
+    position: sticky;
+    top: 0;
+    padding: var(--gutter-m);
+    background-color: black;
+    border-bottom: 2px solid rgb(222, 222, 222);
+    justify-content: space-between;
+}
+
+.pop-up-header button.close-button span {
+    background-color: rgb(255, 255, 255);
+}
+
+.tag {
+    border-radius: var(--rounded);
+    background-color: #272727;
+    display: flex;
+    align-items: center;
+    padding: var(--gutter-s);
+    font-size: .8em;
+    color: rgb(242, 242, 242);
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: var(--gutter-m);
+    padding-top: 0px;
+    gap: var(--gutter-m);
+    color: black;
+    padding: var(--gutter-m);
+}
+
+.text-container p {
+    letter-spacing: 2px;
+    line-height: 2em;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: var(--gutter-m);
+    padding-top: 0px;
+    gap: var(--gutter-m);
+    color: black;
+    padding: var(--gutter-m);
+}
+
+.text-container::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
 }
