--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,7 @@ button.login {
     opacity: 0.7;
     font-weight: 500;
     transition: var(--transition);
+    margin: auto;
 }
 
 button.login:hover {
@@ -213,6 +214,10 @@ button.login:hover {
     box-shadow: var(--shadow);
     z-index: 1;
     transform: translateX(-10%);
+    border-radius: var(--rounded);
+    box-shadow: var(--shadow);
+    border: 2px solid;
+    padding: var(--gutter-xs);
 }
 
 .dropdown-content a {
@@ -220,6 +225,36 @@ button.login:hover {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    position: relative;
+    z-index: 1;
+    border-radius: 6px;
+}
+
+.dropdown-content a:first-child {
+    border-top-right-radius: var(--rounded);
+    border-top-left-radius: var(--rounded);
+}
+
+.dropdown-content a:last-child {
+    border-bottom-right-radius: var(--rounded);
+    border-bottom-left-radius: var(--rounded);
+}
+
+.dropdown-content a::after {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    content: "";
+    left: 0px;
+    top: 0px;
+    background-color: rgb(215, 215, 215);
+    opacity: 0;
+    z-index: -1;
+    border-radius: inherit;
+}
+
+.dropdown-content a:hover::after {
+    opacity: 1;
 }
 
 /* NAV */
