--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,6 @@ h2 {
     color: rgb(250, 255, 195);
     z-index: 1;
     height: 100%;
-
 }
 
 h3 {
@@ -164,9 +163,9 @@ h3 {
 .header-middle {
     padding: var(--gutter-m);
     display: flex;
+    height: 100%;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
     margin: auto;
 }
 
